# BITS-Starter

./: .templatesyncignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: init_repo.sh  init_repo.yml
docs/source/: conf.py
src/demo_instrument/: startup.py
src/demo_instrument/callbacks/: spec_data_file_writer.py
